<resources>
    <string name="app_name">ice3</string>
    <string name="title_activity_main_test">MainActivityTest</string>
    <string name="title_activity_browser_login">Login</string>
    <string name="login_failed">You might had pressed deny button or left the page without make your login.</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="buddies_enable_tracking">Enable Buddy Tracking</string>
    <string name="connect_goggles">Connect Goggles</string>
    <string name="pairing_device_list_dialog_bluetooth">Bluetooth Settings</string>
    <string name="pairing_no_device_paired_title">No device found</string>
    <string name="pairing_no_device_paired_message">Go to bluetooth settings to pair your device</string>
    <string name="status_label">HUD not paired</string>
    <string name="pairing_device_pairing">Device Pairing</string>
    <string name="pairing_please_wait">Please wait...</string>
    <string name="pairing_tap_to_disconnect">"HUD is connected
Tap to disconnect it"</string>
    <string name="pairing_disconnect_device">If you want to disconnect the current device, press disconnect.</string>
    <string name="pairing_hud_tap_to_pair">Tap goggles icon to pair</string>
    <string name="pairing_hud_not_paired">HUD not paired</string>
    <string name="pairing_hud_connected">HUD is connected</string>
    <string name="pairing_hud_connecting">Connecting HUD...</string>
    <string name="pairing_hud_fail_connecting">HUD not found</string>
    <string name="buddies_enable_buddy_tracking">Enable Buddy Tracking?</string>
    <string name="buddies_text_view_center">Buddy Tracking uses GPS and data to share your location with your friends, even when Airwave is closed. To preserve the battery life of your phone, Buddy Tracking will automatically turn off after 8 hours.</string>
    <string name="title_section1">Buddies</string>
    <string name="title_section2">Trips</string>
    <string name="title_section3">Connect</string>
    <string name="buddies_offline">Offline Buddies</string>
    <string name="buddies_online">Online Buddies</string>
    <string name="trips_layout_date">19th</string>
    <string name="buddies_pending_request">Pending Buddy Requested</string>
    <string name="buddies_pending_request_requested">OUTGOING LOCALIZATION</string>
    <string name="buddies_pending_request_requesting">INCOMING REQUEST</string>
    <string name="buddies_pending_request_alert_message_requested">Would you like to accept %1$s’s friend request?</string>
    <string name="buddies_pending_request_alert_message_requesting">Would you like to cancel a friend request to %1$s?</string>
    <string name="buddies_pending_request_alert_positive_button_cancel_request">Cancel Request</string>
    <string name="buddies_pending_request_alert_positive_button_accept">Accept</string>
    <string name="buddies_pending_request_alert_negative_button_deny">Deny</string>
    <string name="buddies_pending_request_alert_neutral_button_later">Decide Later</string>
    <string name="trips_layout_info_one">1</string>
    <string name="trips_layout_info_two">144</string>

    <string name="trips_layout_info_three">123.3</string>

    <string name="trips_layout_place">La Jolla</string>

    <string name="trips_stats_list_total_jumps_number">0</string>
    <string name="trips_stats_list_total_jumps_number_two">0.00</string>
    <string name="trip_details_total_jumps_jumps_text">jumps</string>
    <string name="trips_stats_list_max_altitude_number">1,898</string>
    <string name="trips_stats_list_max_altitude_number_two">698</string>
    <string name="trips_stats_list_m_text">m</string>
    <string name="trips_stats_list_total_distance_number">22.07</string>
    <string name="trips_stats_list_km_text">km</string>
    <string name="trips_stats_list_total_vertical_number">4,186</string>
    <string name="trips_stats_list_max_speed_number">59.80</string>
    <string name="trips_stats_list_kmh_text">km/h</string>
    <string name="trips_stats_list_image_parenthesis">)</string>
    <string name="trips_stats_list_image_runs_text">runs</string>
    <string name="trips_stats_list_image_run_text">run</string>
    <string name="trip_details">Trip Details</string>
    <string name="trip_details_internal_max_speed_top_right_description">ALL TIME BEST</string>
    <string name="trip_details_internal_max_speed_top_left_description">AVERAGE SPEED</string>
    <string name="trip_details_internal_total_vertical_top_right_description">ALL TIME VERTICAL</string>
    <string name="trip_details_internal_total_vertical_top_left_description">BEST RUN</string>
    <string name="trip_details_internal_total_distance_top_right_description">ALL TIME DISTANCE</string>
    <string name="trip_details_internal_total_distance_top_left_description">BEST RUN</string>
    <string name="trip_details_internal_max_altitude_top_right_description">ALL TIME BEST</string>
    <string name="trip_details_internal_max_altitude_top_left_description">MIN ALTITUDE</string>
    <string name="trip_details_internal_total_jumps_top_right_description">BEST HEIGHT</string>
    <string name="trip_details_internal_total_jumps_top_left_description">BEST DISTANCE</string>
    <string name="trip_details_internal_metric_miles_per_hour_description">mph</string>
    <string name="trip_details_internal_metric_miles_description">miles</string>
    <string name="trip_details_internal_metric_feet_description">ft</string>
    <string name="trip_details_internal_metric_meters_description">m</string>
    <string name="trip_details_internal_metric_kilometers_description">km</string>
    <string name="trip_details_internal_metric_kilometers_per_hour_description">km/h</string>
</resources>
