<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/trips_list_item_background_gradient" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <View android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <View android:layout_width="fill_parent" android:layout_height="60.0dip" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:background="@drawable/trips_list_item_dark_gray_background_selector" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginTop="1.0dip">
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/white" android:layout_gravity="center" android:id="@+id/trips_list_item_layout_day_of_month" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/trips_layout_date" />
        </FrameLayout>
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@drawable/list_item_black_text_selector" android:ellipsize="none" android:id="@+id/trips_list_item_layout_place" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginTop="5.0dip" android:text="@string/trips_layout_place"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_view_layout_linear_icon_run_margin_left">
        <ImageView android:id="@+id/list_view_layout_icon_run" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="38.0dip" android:src="@drawable/trips_icon_run" />
        <TextView android:textSize="16.0sp" android:textStyle="normal" android:textColor="@drawable/list_item_gray_text_selector" android:id="@+id/trips_list_item_layout_runs" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="37.0dip" android:text="@string/trips_layout_info_one" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_view_layout_linear_icon_vertical_margin_left">
        <ImageView android:id="@+id/list_view_layout_icon_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="38.0dip" android:src="@drawable/trips_icon_vertical" />
        <TextView android:textSize="16.0sp" android:textStyle="normal" android:textColor="@drawable/list_item_gray_text_selector" android:id="@+id/trips_list_item_layout_total_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="37.0dip" android:text="@string/trips_layout_info_two" />
        <TextView android:textSize="16.0sp" android:textStyle="normal" android:textColor="@drawable/list_item_gray_text_selector" android:id="@+id/trips_list_item_layout_total_vertical_suffix" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginTop="37.0dip" android:text="@string/trips_stats_list_m_text" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_view_layout_linear_icon_speed_margin_left">
        <ImageView android:id="@+id/list_view_layout_icon_speed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="38.0dip" android:src="@drawable/trips_icon_speed" />
        <TextView android:textSize="16.0sp" android:textStyle="normal" android:textColor="@drawable/list_item_gray_text_selector" android:id="@+id/trips_list_item_layout_max_speed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="37.0dip" android:text="@string/trips_layout_info_three" />
        <TextView android:textSize="16.0sp" android:textStyle="normal" android:textColor="@drawable/list_item_gray_text_selector" android:id="@+id/trips_list_item_layout_max_speed_suffix" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginTop="37.0dip" android:text="@string/trips_stats_list_kmh_text" />
    </LinearLayout>

</RelativeLayout>